--- a/opencv-projects/opencv-sdk/build.gradle
+++ b/opencv-projects/opencv-sdk/build.gradle
@@ -123,6 +123,10 @@ android {
         }
     }
 }
-
+//gradle.projectsEvaluated {
+//    tasks.withType(JavaCompile) {
+//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+//    }
+//}
 dependencies {
 }
