--- a/opencv-projects/opencv-sdk/build.gradle
+++ b/opencv-projects/opencv-sdk/build.gradle
@@ -123,10 +123,18 @@ android {
         }
     }
 }
-//gradle.projectsEvaluated {
-//    tasks.withType(JavaCompile) {
-//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
-//    }
-//}
+//https://docs.gradle.org/current/dsl/org.gradle.api.tasks.compile.CompileOptions.html
+
+/*
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        //options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        options.deprecation  = true
+        options.verbose = true
+        options.warnings = false
+    }
+}
+*/
+
 dependencies {
 }
