--- a/opencv-projects/tutorial2-mixed-processing/build.gradle
+++ b/opencv-projects/tutorial2-mixed-processing/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
+    buildToolsVersion "30.0.2"
+
     defaultConfig {
         applicationId "org.opencv.samples.tutorial2"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+
         ndk {
             moduleName "mixed_sample"
         }
@@ -19,23 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-    splits {
-        // Configures multiple APKs based on ABI.
-        abi {
-            // Enables building multiple APKs per ABI.
-            enable true
-            // By default all ABIs are included, so use reset() and include to specify that we only
-            // want APKs, reset() resets the list of ABIs that Gradle should create APKs for to none.
-            reset()
-            // Specifies a list of ABIs that Gradle should create APKs for.
-            include "x86", "x86_64","mips64","mips","armeabi-v7a","armeabi","arm64-v8a"
-            // Specifies that we do not want to also generate a universal APK that includes all ABIs.
-            universalApk false
+    externalNativeBuild {
+        ndkBuild {
+            path 'src/main/jni/Android.mk'
         }
     }
 }
 
 dependencies {
-    implementation project(path: ':opencv-sdk')
+    implementation project(':opencv-sdk')
 }
-
