--- a/opencv-projects/face-detection/src/main/AndroidManifest.xml
+++ b/opencv-projects/face-detection/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                       android:largeScreens="true"
                       android:anyDensity="true" />
 
+    <uses-sdk android:minSdkVersion="30" />
 
     <uses-permission android:name="android.permission.CAMERA"/>
 
