--- a/opencv-projects/opencv-sdk/build.gradle
+++ b/opencv-projects/opencv-sdk/build.gradle
@@ -94,7 +94,7 @@ println "OpenCV: " + project.buildscript.sourceFile
 
 android {
     compileSdkVersion 30
-    //buildToolsVersion "27.0.3" // not needed since com.android.tools.build:gradle:3.0.0
+    buildToolsVersion "30.0.3" // not needed since com.android.tools.build:gradle:3.0.0
 
     defaultConfig {
         minSdkVersion 14
